--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <nav class="horizontal-nav">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="aboutus.html">about us</a></li>
+                        <li><a href="aboutus.html">About us</a></li>
                         <li><a href="kontakt.html">Kontakt</a></li>
                     </ul>
                 </nav>
