--- a/kontakt.html
+++ b/kontakt.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt - Mein Kleidungs-Webshop</title>
+          <!-- 
+    - favicon
+  -->
+  <link rel="icon" href="img/favicon.ico" type="images/x-icon">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
