--- a/hoddies.html
+++ b/hoddies.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kleidungs-Webshop</title>
+          <!-- 
+    - favicon
+  -->
+  <link rel="icon" href="img/favicon.ico" type="images/x-icon">
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
