--- a/hoddies.html
+++ b/hoddies.html
@@ -53,29 +53,29 @@
                 <!-- Produktkarten -->
                 <div class="product-card" id="p-4" data-id="4" data-name="Produkt 4" data-price="59.99">
                     <img src="img/Inlyline.jpeg" alt="Produkt 4" />
-                    <h3>Produkt 4</h3>
-                    <p>Beschreibung des Produkts 4.</p>
+                    <h3>California Hoodie</h3>
+                    <p>Brauner Pullower.</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-6" data-id="6" data-name="Produkt 6" data-price="59.99">
                     <img src="img/kotiva.jpeg" alt="Produkt 6" />
-                    <h3>Produkt 6</h3>
-                    <p>Beschreibung des Produkts 6.</p>
+                    <h3>Stüssy</h3>
+                    <p>Grauer Stüssy Hoodie</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-8" data-id="8" data-name="Produkt 8" data-price="59.99">
                     <img src="img/Marlboro Hoodie.jpeg" alt="Produkt 8" />
-                    <h3>Produkt 8</h3>
-                    <p>Beschreibung des Produkts 8.</p>
+                    <h3>Marlboro</h3>
+                    <p>Marlboro rot Hoodie.</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-11" data-id="11" data-name="Produkt 11" data-price="59.99">
                     <img src="img/Too good to throw away_ Vintage Mystery Surprise Box.jpeg" alt="Produkt 11" />
-                    <h3>Produkt 11</h3>
-                    <p>Beschreibung des Produkts 11.</p>
+                    <h3>Nike</h3>
+                    <p>Vintage Nike Hoodie blau</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
