--- a/hosen.html
+++ b/hosen.html
@@ -53,22 +53,22 @@
                 <!-- Produktkarten -->
                 <div class="product-card" id="p-7" data-id="7" data-name="Produkt 7" data-price="59.99">
                     <img src="img/Manfinity Hypemode Homens Algodão Lavagem Com Água Sanitária Jeans Reta.jpeg" alt="Produkt 7" />
-                    <h3>Produkt 7</h3>
-                    <p>Beschreibung des Produkts 7.</p>
+                    <h3>Pull&Bear</h3>
+                    <p>Black Baggyjeans</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-9" data-id="9" data-name="Produkt 9" data-price="59.99">
                     <img src="img/Men's Faded Patchwork Distressed Loose Jeans - Blue _ M (1).jpeg" alt="Produkt 9" />
-                    <h3>Produkt 9</h3>
-                    <p>Beschreibung des Produkts 9.</p>
+                    <h3>Trentvision</h3>
+                    <p>Trentvision washed Baggyjeans</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-10" data-id="10" data-name="Produkt 10" data-price="59.99">
                     <img src="img/REELL Baggy 30 Broek origing mid blue.jpeg" alt="Produkt 10" />
-                    <h3>Produkt 10</h3>
-                    <p>Beschreibung des Produkts 10.</p>
+                    <h3>Pull&Bear</h3>
+                    <p>Blue Baggyjeans</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
