--- a/schuhe.html
+++ b/schuhe.html
@@ -53,36 +53,36 @@
                 <!-- Produktkarten -->
                 <div class="product-card" id="p-1" data-id="1" data-name="Produkt 1" data-price="49.99">
                     <img src="img/09b741a1-45a5-4756-897d-e0f6f1ea3d56.jpeg" alt="Produkt 1" />
-                    <h3>Produkt 1</h3>
-                    <p>Beschreibung des Produkts 1.</p>
+                    <h3>Nike TNs</h3>
+                    <p>Nike TNs white</p>
                     <p>Preis: 49,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-2" data-id="2" data-name="Produkt 2" data-price="59.99">
                     <img src="img/80abfa86-2e0f-4ee4-a589-435d8c3c4385.jpeg" alt="Produkt 2" />
-                    <h3>Produkt 2</h3>
-                    <p>Beschreibung des Produkts 2.</p>
+                    <h3>Asics</h3>
+                    <p>Asics Desert</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-3" data-id="3" data-name="Produkt 3" data-price="59.99">
                     <img src="img/8a855107-fcc2-42ff-9a18-74138e67428e.jpeg" alt="Produkt 3" />
-                    <h3>Produkt 3</h3>
-                    <p>Beschreibung des Produkts 3.</p>
+                    <h3>Newbalance 911</h3>
+                    <p>Newbalance 911 black</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-13" data-id="13" data-name="Produkt 13" data-price="59.99">
                     <img src="img/Vintage Nike Air Shoes.jpeg" alt="Produkt 13" />
-                    <h3>Produkt 13</h3>
-                    <p>Beschreibung des Produkts 13.</p>
+                    <h3>Nike</h3>
+                    <p>Vintage Nike</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
-                <div class="product-card" id="p-14" data-id="14" data-name="Produkt 14" data-price="59.99">
+                <div class="product-card" id="p-14">
                     <img src="img/𝒂𝒛𝒖𝒍𝒂 & 𝒌𝒂𝒕𝒂𝒓𝒂.jpeg" alt="Produkt 14" />
-                    <h3>Produkt 14</h3>
-                    <p>Beschreibung des Produkts 14.</p>
+                    <h3>Asics</h3>
+                    <p>Asics track 2</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
