--- a/index.html
+++ b/index.html
@@ -54,36 +54,36 @@
                 <!-- Produktkarten -->
                 <div class="product-card" id="p-3">
                     <img src="img/8a855107-fcc2-42ff-9a18-74138e67428e.jpeg" alt="Produkt 3" />
-                    <h3>Produkt 3</h3>
-                    <p>Beschreibung des Produkts 3.</p>
+                    <h3>Newbalance 911</h3>
+                    <p>Newbalance 911 black</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-8">
                     <img src="img/Marlboro Hoodie.jpeg" alt="Produkt 8" />
-                    <h3>Produkt 8</h3>
-                    <p>Beschreibung des Produkts 8.</p>
+                    <h3>Marlboro Hoodie</h3>
+                    <p>Marlboro rot Hoodie</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-9">
                     <img src="img/Men's Faded Patchwork Distressed Loose Jeans - Blue _ M (1).jpeg" alt="Produkt 9" />
-                    <h3>Produkt 9</h3>
-                    <p>Beschreibung des Produkts 9.</p>
+                    <h3>Trentvision</h3>
+                    <p>Trentvision washed Baggyjeans</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-11">
                     <img src="img/Too good to throw away_ Vintage Mystery Surprise Box.jpeg" alt="Produkt 11" />
-                    <h3>Produkt 11</h3>
-                    <p>Beschreibung des Produkts 11.</p>
+                    <h3>Nike</h3>
+                    <p>Nike Hoodie blue</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
                 <div class="product-card" id="p-14">
                     <img src="img/𝒂𝒛𝒖𝒍𝒂 & 𝒌𝒂𝒕𝒂𝒓𝒂.jpeg" alt="Produkt 14" />
-                    <h3>Produkt 14</h3>
-                    <p>Beschreibung des Produkts 14.</p>
+                    <h3>Asics</h3>
+                    <p>Asics track 2</p>
                     <p>Preis: 59,99 €</p>
                     <button class="add-to-cart">In den Warenkorb</button>
                 </div>
